fix - adjust alignment & add edge border.

--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,41 @@
 body{
+    background-color: #131313;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.calculator {
+    height: fit-content;
+    width: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #000000;
-    margin: 200px;
+    justify-content: center;
+    margin: 50px;
+    padding: 10px;
+    flex-shrink: 1;
+    background-color: #080808;
+    border: 3px, solid, #505050;
+    border-radius: 15px;
 }
 
 .display {
     width: 235px;
     height: 90px;
-    border: solid, rgb(255, 255, 255);
-    border-radius: 10px;
     margin: 10px;
     padding: 5px;
-    color: white;
-    font-family: Helvetica, sans-serif;
-    font-size: 50px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-content: flex-end;
     align-items: flex-end;
+    border: solid, 2px #505050;
+    border-radius: 10px;
+    color: white;
+    font-family: Helvetica, sans-serif;
+    font-size: 50px;
     overflow:scroll;
 }
 
@@ -28,6 +43,12 @@ body{
     font-size: 25px;
     color: #505050;
 }
+
+.topDisplay, .bottomDisplay {
+    padding-right: 3.5px;
+}
+
+
 
 .number, 
 .operator, 
